@@ -15,7 +15,8 @@
       (with-open-file (f lisp :direction :output)
         (prin1 '(trythis fopcompile-test-undef-var) f))
       (multiple-value-bind (fasl warningp errorp)
-          (compile-file lisp :output-file fasl)
+          (let ((sb-c::*fopcompile* t))
+            (compile-file lisp :output-file fasl))
         (sb-int:unencapsulate 'sb-c::fopcompile 'test)
         (assert *was-fopcompile-called*)
         (assert (and fasl warningp errorp))))
